微修正とメンバーページの作成

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="about">
         <h2>About 「Dear」</h2>
         <p class="about-sentence">
-          この度、今年の夏に最高のメンバー達とグループ写真展<b>「Dear」</b>を
+          この度、今年の夏に<b>10人</b>の最高のメンバーでグループ写真展<b>「Dear」</b>を
           開催する運びとなりました。
         </p>
         <p class="about-sentence">
@@ -42,49 +42,49 @@
         <h2>Members</h2>
         <div class="film">
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/suto.html">
               <img src="./iamges/member_icons/suto.jpg" alt="" />
               <p>すとう しゅんすけ</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/reo.html">
               <img src="./iamges/member_icons/reo.jpg" alt="" />
               <p>Reo</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/aokichi.html">
               <img src="./iamges/member_icons/aokichi.jpg" alt="" />
               <p>あおきち</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/yugra.html">
               <img src="./iamges/member_icons/yugra.jpg" alt="" />
               <p>yu</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/kojikoji.html">
               <img src="./iamges/member_icons/koji.jpg" alt="" />
               <p>こじこじ</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/mickan.html">
               <img src="./iamges/member_icons/mickan.jpg" alt="" />
               <p>蜜柑さん</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/suzuna.html">
               <img src="./iamges/member_icons/suzuna.jpg" alt="" />
               <p>すずな</p>
             </a>
           </div>
           <div class="photo">
-            <a href="./members/rikkun.html">
+            <a href="./members/yu.html">
               <img src="./iamges/member_icons/yu.jpg" alt="" />
               <p>ゆう</p>
             </a>
@@ -96,28 +96,38 @@
             </a>
           </div>
           <div class="photo">
-            <img src="./iamges/member_icons/hana.jpg" alt="" />
-            <p>Hana✽*</p>
+            <a href="./members/hana.html">
+              <img src="./iamges/member_icons/hana.jpg" alt="" />
+              <p>Hana✽*</p>
+            </a>
           </div>
         </div>
       </section>
 
       <section class="dates">
         <h2>Dates</h2>
-        <p class="date">2022/08</p>
-        <p class="date">18<small>(Tue)</small> - 23<small>(Thu)</small></p>
+        <p>2022/08</p>
+        <p>18<span>(Thu)</span> - 23<span>(Tue)</span></p>
         <p>10:00 - 18:30</p>
         <small>※lastday 10:00 - 17:30</small>
       </section>
       <section class="access">
         <h2>Access</h2>
         <img class="map" src="./iamges/map.jpg" alt="" />
-        <p>文房堂ギャラリー</p>
+        <h2>文房堂ギャラリー</h2>
         <p>〒101-0051</p>
-        <p>東京都千代田区神田 神保時1-21-14F</p>
+        <p>東京都千代田区神田 神保時 1-21-1 4F</p>
+        <a
+          href="https://goo.gl/maps/QJaPdSU6xFYSKf8Y8"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Google Map</a
+        >
+        <br />
         <p>神保町駅より徒歩5分</p>
         <p>御茶ノ水駅より徒歩7分</p>
       </section>
     </main>
+    <footer>Dear members</footer>
   </body>
 </html>
