--- a/members/aokichi.html
+++ b/members/aokichi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dear | Rikkun</title>
+    <title>Dear | あおきち</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,11 +16,15 @@
     <main>
       <img class="bg-image" src="/iamges/main_visual.jpg" alt="" />
       <section class="personal-data">
-        <img class="member-logo" src="/iamges/member_icons/rikuto.jpg" alt="" />
-        <h1 class="name">Rikkun</h1>
+        <img
+          class="member-logo"
+          src="/iamges/member_icons/aokichi.jpg"
+          alt=""
+        />
+        <h1 class="name">あおきち</h1>
         <div class="social-media">
           <a
-            href="https://www.instagram.com/rikton_0318/"
+            href="https://www.instagram.com/aokichi_photo/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -31,7 +35,7 @@
             />
           </a>
           <a
-            href="https://twitter.com/rikton_0318"
+            href="https://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
           >
