--- a/members/yugra.html
+++ b/members/yugra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dear | Rikkun</title>
+    <title>Dear | yu</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,11 +16,11 @@
     <main>
       <img class="bg-image" src="/iamges/main_visual.jpg" alt="" />
       <section class="personal-data">
-        <img class="member-logo" src="/iamges/member_icons/rikuto.jpg" alt="" />
-        <h1 class="name">Rikkun</h1>
+        <img class="member-logo" src="/iamges/member_icons/yugra.jpg" alt="" />
+        <h1 class="name">yu</h1>
         <div class="social-media">
           <a
-            href="https://www.instagram.com/rikton_0318/"
+            href="https://www.instagram.com/yugraphic6/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -31,7 +31,7 @@
             />
           </a>
           <a
-            href="https://twitter.com/rikton_0318"
+            href="https://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
           >
