--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dear</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="og:image" content="./images/ogp_image.jpg" />
   </head>
   <body>
     <main>
