--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="js">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:url" content="https://dear-photo-exhibition.netlify.app/" />
+    <meta name="og:title" content="Dear_グループ写真展" />
+    <meta name="og:image" content="./images/ogp_image.jpg" />
     <title>Dear</title>
     <link rel="stylesheet" href="style.css" />
-    <meta name="og:image" content="./images/ogp_image.jpg" />
   </head>
   <body>
     <main>
