--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="og:url" content="https://dear-photo-exhibition.netlify.app/" />
     <meta name="og:title" content="Dear_グループ写真展" />
-    <meta name="og:image" content="./images/ogp_image.jpg" />
-    <title>Dear</title>
+    <meta
+      name="og:image"
+      content="https://dear-photo-exhibition.netlify.app/images/ogp_image.jpg"
+    />
+    <title>Dear グループ写真展</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
