ogp画像の変更

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="og:title" content="Dear_グループ写真展" />
     <meta
       name="og:image"
-      content="https://dear-photo-exhibition.netlify.app/images/ogp_image.jpg"
+      content="https://dear-photo-exhibition.netlify.app/images/main_visual.jpg"
     />
     <title>Dear グループ写真展</title>
     <link rel="stylesheet" href="style.css" />
