タイポしてたのを直した

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="top">
         <img
           class="main-visual"
-          src="./iamges/main_visual.jpg"
+          src="./images/main_visual.jpg"
           alt="Dearメインビジュアル"
         />
         <h1>Dear</h1>
@@ -49,61 +49,61 @@
         <div class="film">
           <div class="photo">
             <a href="./members/suto.html">
-              <img src="./iamges/member_icons/suto.jpg" alt="" />
+              <img src="./images/member_icons/suto.jpg" alt="" />
               <p>すとう しゅんすけ</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/reo.html">
-              <img src="./iamges/member_icons/reo.jpg" alt="" />
+              <img src="./images/member_icons/reo.jpg" alt="" />
               <p>Reo</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/aokichi.html">
-              <img src="./iamges/member_icons/aokichi.jpg" alt="" />
+              <img src="./images/member_icons/aokichi.jpg" alt="" />
               <p>あおきち</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/yugra.html">
-              <img src="./iamges/member_icons/yugra.jpg" alt="" />
+              <img src="./images/member_icons/yugra.jpg" alt="" />
               <p>yu</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/kojikoji.html">
-              <img src="./iamges/member_icons/koji.jpg" alt="" />
+              <img src="./images/member_icons/koji.jpg" alt="" />
               <p>こじこじ</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/mickan.html">
-              <img src="./iamges/member_icons/mickan.jpg" alt="" />
+              <img src="./images/member_icons/mickan.jpg" alt="" />
               <p>蜜柑さん</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/suzuna.html">
-              <img src="./iamges/member_icons/suzuna.jpg" alt="" />
+              <img src="./images/member_icons/suzuna.jpg" alt="" />
               <p>すずな</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/yu.html">
-              <img src="./iamges/member_icons/yu.jpg" alt="" />
+              <img src="./images/member_icons/yu.jpg" alt="" />
               <p>ゆう</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/rikkun.html">
-              <img src="./iamges/member_icons/rikuto.jpg" alt="" />
+              <img src="./images/member_icons/rikuto.jpg" alt="" />
               <p>Rikkun</p>
             </a>
           </div>
           <div class="photo">
             <a href="./members/hana.html">
-              <img src="./iamges/member_icons/hana.jpg" alt="" />
+              <img src="./images/member_icons/hana.jpg" alt="" />
               <p>Hana✽*</p>
             </a>
           </div>
@@ -119,7 +119,7 @@
       </section>
       <section class="access">
         <h2>Access</h2>
-        <img class="map" src="./iamges/map.jpg" alt="" />
+        <img class="map" src="./images/map.jpg" alt="" />
         <h2>文房堂ギャラリー</h2>
         <p>〒101-0051</p>
         <p>東京都千代田区神田 神保時 1-21-1 4F</p>
