--- a/members/aokichi.html
+++ b/members/aokichi.html
@@ -14,11 +14,11 @@
       >
     </header>
     <main>
-      <img class="bg-image" src="/iamges/main_visual.jpg" alt="" />
+      <img class="bg-image" src="/images/main_visual.jpg" alt="" />
       <section class="personal-data">
         <img
           class="member-logo"
-          src="/iamges/member_icons/aokichi.jpg"
+          src="/images/member_icons/aokichi.jpg"
           alt=""
         />
         <h1 class="name">あおきち</h1>
@@ -30,7 +30,7 @@
           >
             <img
               class="sns-logo"
-              src="/iamges/Instagram_Glyph_Gradient_RGB.png"
+              src="/images/Instagram_Glyph_Gradient_RGB.png"
               alt=""
             />
           </a>
@@ -41,7 +41,7 @@
           >
             <img
               class="sns-logo"
-              src="/iamges/2021 Twitter logo - blue.png"
+              src="/images/2021 Twitter logo - blue.png"
               alt=""
             />
           </a>
