--- a/members/suto.html
+++ b/members/suto.html
@@ -14,9 +14,9 @@
       >
     </header>
     <main>
-      <img class="bg-image" src="/iamges/main_visual.jpg" alt="" />
+      <img class="bg-image" src="/images/main_visual.jpg" alt="" />
       <section class="personal-data">
-        <img class="member-logo" src="/iamges/member_icons/suto.jpg" alt="" />
+        <img class="member-logo" src="/images/member_icons/suto.jpg" alt="" />
         <h1 class="name">すとう しゅんすけ</h1>
         <div class="social-media">
           <a
@@ -26,7 +26,7 @@
           >
             <img
               class="sns-logo"
-              src="/iamges/Instagram_Glyph_Gradient_RGB.png"
+              src="/images/Instagram_Glyph_Gradient_RGB.png"
               alt=""
             />
           </a>
@@ -37,7 +37,7 @@
           >
             <img
               class="sns-logo"
-              src="/iamges/2021 Twitter logo - blue.png"
+              src="/images/2021 Twitter logo - blue.png"
               alt=""
             />
           </a>
