--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="og:url" content="https://dear-photo-exhibition.netlify.app/" />
-    <meta name="og:title" content="Dear_グループ写真展" />
     <meta
-      name="og:image"
+      property="og:url"
+      content="https://dear-photo-exhibition.netlify.app"
+    />
+    <meta property="og:title" content="Dear_グループ写真展" />
+    <meta
+      property="og:image"
       content="https://dear-photo-exhibition.netlify.app/images/main_visual.jpg"
     />
     <title>Dear グループ写真展</title>
