--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
       property="og:url"
       content="https://dear-photo-exhibition.netlify.app"
     />
-    <meta property="og:title" content="Dear_グループ写真展" />
+    <meta property="og:title" content="Dear グループ写真展" />
+    <meta
+      property="og:description"
+      content="今年の夏に10人の最高のメンバーでグループ写真展「Dear」を開催いたします。"
+    />
     <meta
       property="og:image"
       content="https://dear-photo-exhibition.netlify.app/images/main_visual.jpg"
