スタイルの修正と個人ページのデザイン変更

--- a/members/reo.html
+++ b/members/reo.html
@@ -44,8 +44,35 @@
         </div>
       </section>
       <section class="detail">
-        <h2>Theme</h2>
-        <p class="coming">- COMING SOON -</p>
+        <h2>
+          Dear
+          <span class="size-small">is</span><br />
+          <span class="center">残酷</span>
+        </h2>
+        <p>
+          この世界は残酷だ。<br />
+          <br />
+          非情で、冷たくて、理不尽に満ち溢れてる。<br />
+          <br />
+          どんなに頑張ったって報われない時もある。<br />
+          どんなに想っていても伝わらない事もある。<br />
+          <br />
+          上手くいかない日が続いて、自分は誰からも必要とされてないんじゃないかと思ってしまう。<br />
+          <br />
+          何もかもが嫌になって、いつもと違う駅で降りて、あてもなくブラブラしてみたりするけど、何かが変わるわけでもなかった。<br />
+          <br />
+          でも滲んだ街灯がキラキラと輝いて綺麗だった。不思議と肌にあたる風が心地よかった。<br />
+          <br />
+          <br />
+          <b>この世界は残酷だ。だからこそ愛おしい。</b><br />
+          <br />
+          <br />
+          大切な人たちの笑顔も、窓から射す朝の陽射しも、巡る季節や色付く花も。<br />
+          <br />
+          ぜんぶぜんぶ<br />
+          <br />
+          残酷だからこそ、愛おしい。
+        </p>
       </section>
     </main>
   </body>
