--- a/members/rikkun.html
+++ b/members/rikkun.html
@@ -44,8 +44,14 @@
         </div>
       </section>
       <section class="detail">
-        <h2>Theme</h2>
-        <p class="coming">- COMING SOON -</p>
+        <h2>
+          Dear
+          <span class="size-small">is</span><br />
+          <span class="center">愛おしい日々</span>
+        </h2>
+        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
+        <img src="/images/main_visual.jpg" alt="" />
+        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
       </section>
     </main>
   </body>
