--- a/members/reo.html
+++ b/members/reo.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:url"
+      content="https://dear-photo-exhibition.netlify.app"
+    />
+    <meta property="og:title" content="Dear | Reo" />
+    <meta
+      property="og:description"
+      content="今年の夏に10人の最高のメンバーでグループ写真展「Dear」を開催いたします。"
+    />
+    <meta
+      property="og:image"
+      content="https://dear-photo-exhibition.netlify.app/images/member_icons/reo.jpg"
+    />
     <title>Dear | Reo</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
