scrollを促す矢印を付けた

--- a/index.html
+++ b/index.html
@@ -53,67 +53,73 @@
       </section>
       <section class="members">
         <h2>Members</h2>
-        <div class="film">
-          <div class="photo">
-            <a href="./members/suto.html">
-              <img src="./images/member_icons/suto.jpg" alt="" />
-              <p>すとう しゅんすけ</p>
-            </a>
+        <div class="film-wrap" id="film">
+          <div class="film">
+            <div class="photo">
+              <a href="./members/suto.html">
+                <img src="./images/member_icons/suto.jpg" alt="" />
+                <p>すとう しゅんすけ</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/reo.html">
+                <img src="./images/member_icons/reo.jpg" alt="" />
+                <p>Reo</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/aokichi.html">
+                <img src="./images/member_icons/aokichi.jpg" alt="" />
+                <p>あおきち</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/yugra.html">
+                <img src="./images/member_icons/yugra.jpg" alt="" />
+                <p>yu</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/kojikoji.html">
+                <img src="./images/member_icons/koji.jpg" alt="" />
+                <p>こじこじ</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/mickan.html">
+                <img src="./images/member_icons/mickan.jpg" alt="" />
+                <p>蜜柑さん</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/suzuna.html">
+                <img src="./images/member_icons/suzuna.jpg" alt="" />
+                <p>すずな</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/yu.html">
+                <img src="./images/member_icons/yu.jpg" alt="" />
+                <p>ゆう</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/rikkun.html">
+                <img src="./images/member_icons/rikuto.jpg" alt="" />
+                <p>Rikkun</p>
+              </a>
+            </div>
+            <div class="photo">
+              <a href="./members/hana.html">
+                <img src="./images/member_icons/hana.jpg" alt="" />
+                <p>Hana✽*</p>
+              </a>
+            </div>
           </div>
-          <div class="photo">
-            <a href="./members/reo.html">
-              <img src="./images/member_icons/reo.jpg" alt="" />
-              <p>Reo</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/aokichi.html">
-              <img src="./images/member_icons/aokichi.jpg" alt="" />
-              <p>あおきち</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/yugra.html">
-              <img src="./images/member_icons/yugra.jpg" alt="" />
-              <p>yu</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/kojikoji.html">
-              <img src="./images/member_icons/koji.jpg" alt="" />
-              <p>こじこじ</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/mickan.html">
-              <img src="./images/member_icons/mickan.jpg" alt="" />
-              <p>蜜柑さん</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/suzuna.html">
-              <img src="./images/member_icons/suzuna.jpg" alt="" />
-              <p>すずな</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/yu.html">
-              <img src="./images/member_icons/yu.jpg" alt="" />
-              <p>ゆう</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/rikkun.html">
-              <img src="./images/member_icons/rikuto.jpg" alt="" />
-              <p>Rikkun</p>
-            </a>
-          </div>
-          <div class="photo">
-            <a href="./members/hana.html">
-              <img src="./images/member_icons/hana.jpg" alt="" />
-              <p>Hana✽*</p>
-            </a>
-          </div>
+        </div>
+        <div class="arrow-wrap">
+          <span class="arrow left-arrow" id="left-arrow"></span>
+          <span class="arrow right-arrow" id="right-arrow"></span>
         </div>
       </section>
 
@@ -143,4 +149,5 @@
     </main>
     <footer>Dear members</footer>
   </body>
+  <script src="./index.js"></script>
 </html>
