個人ページの追加

--- a/members/aokichi.html
+++ b/members/aokichi.html
@@ -64,11 +64,16 @@
         <h2>
           Dear
           <span class="size-small">is</span><br />
-          <span class="center">愛おしい日々</span>
+          <span class="center">曖昧</span>
         </h2>
-        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
-        <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
+        <p>
+          自分にとっての愛おしさの表現をしたいと思った時に、そこには<b>"曖昧さ"</b>を入れたいなと考えました。<br />
+          <br />
+          自分はキッチリ美しいものやキッチリカッコいいものでは無く、見る人によって感じ方の違う、表現に余白のある写真にとても魅力を感じます。<br />
+          どこか曖昧で、不安定で、見る人に考える余地のある写真にこそ美しさや愛おしさを感じる。<br />
+          <br />
+          見る人が、きっとその人なりの何かを感じる写真、そんな表現をしていきたい。<br />
+        </p>
       </section>
     </main>
   </body>
