--- a/members/mickan.html
+++ b/members/mickan.html
@@ -60,11 +60,20 @@
         <h2>
           Dear
           <span class="size-small">is</span><br />
-          <span class="center">愛おしい日々</span>
+          <span class="center">36.6℃</span>
         </h2>
-        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
-        <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
+        <p>
+          Dearの訳語のひとつである「愛おしい」は、
+          心も身体も温かくなるような感情だと思います。<br />
+          体温の平均である<b>36度6分</b>を副題とし、親しい人との距離感や体温が感じられる写真でDearを表現したいと思います。<br />
+          なぜなら、私は身近な人やその思い出に対して強く愛おしさを感じるからです。<br />
+          <br />
+          今回、あえてカメラ慣れしていない友人を被写体とし、ありのままの距離感を撮影する予定です。<br />
+          好きな人たちと過ごす、柔らかで温かい時間を大きく展示したいです。<br />
+          <br />
+          見た人それぞれが大切な誰かを連想し、<br />
+          会いに行きたくなってしまうような作品をお届けできればなと考えています。
+        </p>
       </section>
     </main>
   </body>
