--- a/members/rikkun.html
+++ b/members/rikkun.html
@@ -60,11 +60,18 @@
         <h2>
           Dear
           <span class="size-small">is</span><br />
-          <span class="center">愛おしい日々</span>
+          <span class="center">帰る</span>
         </h2>
-        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
-        <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
+        <p>
+          <b>「こんなことがあった」って君と話したかったんだ</b><br />
+          <br />
+          そんな当たり前のようで愛おしいことを歌った星野源さんの「喜劇」<br />
+          <br />
+          嫌なこと、楽しいこと、全部を分かち合い話せる喜び<br />
+          できるだけ、続けたい日々<br />
+          <br />
+          当たり前の日々の愛おしさを歌った曲を僕なりの解釈で写したいと思います。<br />
+        </p>
       </section>
     </main>
   </body>
