蜜柑の名前を修正

--- a/members/mickan.html
+++ b/members/mickan.html
@@ -8,7 +8,7 @@
       property="og:url"
       content="https://dear-photo-exhibition.netlify.app"
     />
-    <meta property="og:title" content="Dear | 蜜柑さん" />
+    <meta property="og:title" content="Dear | 甘夏蜜柑" />
     <meta
       property="og:description"
       content="今年の夏に10人の最高のメンバーでグループ写真展「Dear」を開催いたします。"
@@ -17,7 +17,7 @@
       property="og:image"
       content="https://dear-photo-exhibition.netlify.app/images/member_icons/mickan.jpg"
     />
-    <title>Dear | 蜜柑さん</title>
+    <title>Dear | 甘夏蜜柑</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -30,7 +30,7 @@
       <img class="bg-image" src="/images/main_visual.jpg" alt="" />
       <section class="personal-data">
         <img class="member-logo" src="/images/member_icons/mickan.jpg" alt="" />
-        <h1 class="name">蜜柑さん</h1>
+        <h1 class="name">甘夏蜜柑</h1>
         <div class="social-media">
           <a
             href="https://www.instagram.com/mickan_3/"
