--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="photo">
               <a href="./members/mickan.html">
                 <img src="./images/member_icons/mickan.jpg" alt="" />
-                <p>蜜柑さん</p>
+                <p>甘夏蜜柑</p>
               </a>
             </div>
             <div class="photo">
