詳細ページ追記

--- a/members/suzuna.html
+++ b/members/suzuna.html
@@ -60,11 +60,19 @@
         <h2>
           Dear
           <span class="size-small">is</span><br />
-          <span class="center">愛おしい日々</span>
+          <span class="center">色々。</span>
         </h2>
-        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
-        <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
+        <p>
+          <b>“愛おしい”</b>と思う気持ちにはたくさんの色がある。<br />
+          その時々で変わってしまう。<br />
+          嬉しい時、楽しい時<br />
+          悲しい時、大変な時<br />
+          イエローもブルーも素敵。<br />
+          そんな時もあるさ、と自分の肩を叩いて<br />
+          生きていけたらいいなぁ。<br />
+          <br />
+          そんな毎日、毎秒の色が伝わったら嬉しいです。
+        </p>
       </section>
     </main>
   </body>
