個人ページの追加

--- a/members/suto.html
+++ b/members/suto.html
@@ -60,11 +60,36 @@
         <h2>
           Dear
           <span class="size-small">is</span><br />
-          <span class="center">愛おしい日々</span>
+          <span class="center">....</span>
         </h2>
-        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
-        <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
+        <p>
+          二度と取り戻せない時間。<br />
+          そんな瞬間に対して愛おしい気持ちを抱く。<br />
+          愛おしいから大切にしたいと思うし、<br />
+          忘れたくないと願う。<br />
+          <br />
+          青春時代のあの瞬間、<br />
+          どうでもいいことに悩んだ<br />
+          あの時間、<br />
+          人生でいちばん眩しくて、<br />
+          儚くて、<br />
+          <br />
+          脆かった。<br />
+          <br />
+          早く大人になりたくて、<br />
+          でも大人になるには早すぎた。<br />
+          <br />
+          そして、子供でいるには<br />
+          知りすぎてしまった。<br />
+          <br />
+          もう少し好きにやらせてよ。<br />
+          <br />
+          ねじを巻いても進むだけ。<br />
+          <br />
+          <br />
+          "青春時代が終われば私たち、<br />
+          生きてる意味がないわ"<br />
+        </p>
       </section>
     </main>
   </body>
