--- a/members/hana.html
+++ b/members/hana.html
@@ -46,6 +46,7 @@
         </div>
       </section>
       <section class="detail">
+        <p>COMING SOON</p>
       </section>
     </main>
   </body>
