--- a/members/kojikoji.html
+++ b/members/kojikoji.html
@@ -43,28 +43,12 @@
               alt=""
             />
           </a>
-          <a
-            href="https://twitter.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              class="sns-logo"
-              src="/images/2021 Twitter logo - blue.png"
-              alt=""
-            />
-          </a>
         </div>
       </section>
       <section class="detail">
         <h2>
-          Dear
-          <span class="size-small">is</span><br />
-          <span class="center">愛おしい日々</span>
+          <span class="center">COMING SOON</span>
         </h2>
-        <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
-        <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
       </section>
     </main>
   </body>
