--- a/members/kojikoji.html
+++ b/members/kojikoji.html
@@ -46,9 +46,7 @@
         </div>
       </section>
       <section class="detail">
-        <h2>
-          <span class="center">COMING SOON</span>
-        </h2>
+        <p>COMING SOON</p>
       </section>
     </main>
   </body>
