--- a/members/mickan.html
+++ b/members/mickan.html
@@ -44,7 +44,7 @@
             />
           </a>
           <a
-            href="https://twitter.com/"
+            href="https://twitter.com/mickan_3/"
             target="_blank"
             rel="noopener noreferrer"
           >
