--- a/members/reo.html
+++ b/members/reo.html
@@ -44,7 +44,7 @@
             />
           </a>
           <a
-            href="https://twitter.com/"
+            href="https://twitter.com/photo_nil/"
             target="_blank"
             rel="noopener noreferrer"
           >
