--- a/members/suto.html
+++ b/members/suto.html
@@ -44,7 +44,7 @@
             />
           </a>
           <a
-            href="https://twitter.com/"
+            href="https://twitter.com/suto_shunsuke_/"
             target="_blank"
             rel="noopener noreferrer"
           >
