--- a/members/yugra.html
+++ b/members/yugra.html
@@ -43,17 +43,6 @@
               alt=""
             />
           </a>
-          <a
-            href="https://twitter.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              class="sns-logo"
-              src="/images/2021 Twitter logo - blue.png"
-              alt=""
-            />
-          </a>
         </div>
       </section>
       <section class="detail">
@@ -64,7 +53,7 @@
         </h2>
         <p>ここに文字が入ります。説明やコンセプトを入れてほしいです。</p>
         <img src="/images/main_visual.jpg" alt="" />
-        <p>ここにも文字が入ります。画像と文字の順は自由です。</p>
+        <p>COMING SOON</p>
       </section>
     </main>
   </body>
