個人ページの文言を修正

--- a/members/suto.html
+++ b/members/suto.html
@@ -57,38 +57,38 @@
         </div>
       </section>
       <section class="detail">
-        <h2>
-          Dear
-          <span class="size-small">is</span><br />
-          <span class="center">....</span>
-        </h2>
+        <h2></h2>
         <p>
+          <b
+            >"青春時代が終われば私たち、<br />
+            生きてる意味がないわ"<br />
+          </b>
+          <br />
+          <br />
           二度と取り戻せない時間。<br />
-          そんな瞬間に対して愛おしい気持ちを抱く。<br />
-          愛おしいから大切にしたいと思うし、<br />
+          そんな瞬間に対して<br />
+          私は愛おしい気持ちを抱く。<br />
+          <br />
+          二度と戻らないから<br />
+          大切にしたいと思うし、<br />
           忘れたくないと願う。<br />
           <br />
           青春時代のあの瞬間、<br />
           どうでもいいことに悩んだ<br />
-          あの時間、<br />
+          あの時間。<br />
           人生でいちばん眩しくて、<br />
-          儚くて、<br />
+          儚くて、脆くて、<br />
           <br />
-          脆かった。<br />
+          愛おしい。<br />
           <br />
-          早く大人になりたくて、<br />
+          <br />
+          あの頃、私は<br />
+          早く大人になりたくて。<br />
+          <br />
           でも大人になるには早すぎた。<br />
           <br />
           そして、子供でいるには<br />
           知りすぎてしまった。<br />
-          <br />
-          もう少し好きにやらせてよ。<br />
-          <br />
-          ねじを巻いても進むだけ。<br />
-          <br />
-          <br />
-          "青春時代が終われば私たち、<br />
-          生きてる意味がないわ"<br />
         </p>
       </section>
     </main>
