個人ページの実装

--- a/members/kojikoji.html
+++ b/members/kojikoji.html
@@ -46,7 +46,29 @@
         </div>
       </section>
       <section class="detail">
-        <p>COMING SOON</p>
+        <h2>
+          <span class="center">
+            Dear
+            <span class="size-small">to</span>
+            me
+          </span>
+        </h2>
+        <p>
+          人々はよく「幸せになりたい」と口にします。<br />
+          あなたは何を手に入れたら幸せになれますか？<br />
+          <br />
+          僕は恋人もいないし、お金があるわけでもなく、友達が特別多いわけでもありません。<br />
+          <br />
+          でも僕は幸せです。<br />
+          当たり前が当たり前でない事。<br />
+          無くなった当たり前は取り戻せない事。<br />
+          <br />
+          たまには自分が持ってる幸せを振り返ってみて下さい。大切にして下さい。<br />
+          <br />
+          今回は失ってから気付かされる大切なものへの「愛」を表現しました。<br />
+          <br />
+          僕の写真を見て、当たり前に明日が来ることに感謝できる方が1人でも増えてくれたら嬉しいです。<br />
+        </p>
       </section>
     </main>
   </body>
