--- a/index.html
+++ b/index.html
@@ -123,6 +123,36 @@
         </div>
       </section>
 
+      <section class="main-visuals">
+        <h2>Main Visuals</h2>
+        <details>
+          <summary></summary>
+
+          <div class="details-contents">
+            <div class="frame-wrap">
+              <div class="frame">
+                <img
+                  class="main-visual-image"
+                  src="./images/main_visuals/rikuto.jpg"
+                />
+                <span class="shadow"></span>
+              </div>
+              <p class="name">Rikkun</p>
+            </div>
+            <div class="frame-wrap">
+              <div class="frame">
+                <img
+                  class="main-visual-image"
+                  src="./images/main_visuals/rikuto.jpg"
+                />
+                <span class="shadow"></span>
+              </div>
+              <p class="name">Rikkun</p>
+            </div>
+          </div>
+        </details>
+      </section>
+
       <section class="dates">
         <h2>Dates</h2>
         <p>2022/08</p>
