個人ページの追加

--- a/members/hana.html
+++ b/members/hana.html
@@ -46,7 +46,15 @@
         </div>
       </section>
       <section class="detail">
-        <p>COMING SOON</p>
+        <h2>
+          Dear
+          <span class="size-small">is</span><br />
+          <span class="center">「またね」</span>
+        </h2>
+        <p>
+          サヨナラは言わない<br />
+          私達、また会える日を待っているから…
+        </p>
       </section>
     </main>
   </body>
