--- a/members/yugra.html
+++ b/members/yugra.html
@@ -46,7 +46,24 @@
         </div>
       </section>
       <section class="detail">
-        <p>COMING SOON</p>
+        <h2>
+          Dear
+          <span class="size-small">is</span><br />
+          <span class="center">きっかけ</span>
+        </h2>
+        <p>
+          一通のDMがきっかけで<br />
+          「私」を知ることができた。<br />
+          <br />
+          写真をきっかけに「私」を知ってほしい。<br />
+          <br />
+          その辺にどこでも落っこちていて<br />
+          いろんな形や色をしていて<br />
+          時にかけがえのないものにもなる。<br />
+          <br />
+          逃さないように。<br />
+          溢れてかないように。<br />
+        </p>
       </section>
     </main>
   </body>
