全員表示する形でコミット

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         <h2>Main Visuals</h2>
         <details open>
           <summary></summary>
-          <div class="details-contents">
-            <div class="frame-wrap">
+          <div class="details-contents" id="mainVisualsWrap">
+            <!-- <div class="frame-wrap">
               <a class="frame" href="./members/yu.html">
                 <img
                   class="main-visual-image-vertical"
@@ -144,7 +144,7 @@
               <a class="frame" href="./members/suzuna.html">
                 <img
                   class="main-visual-image-vertical"
-                  src="./images/main_visuals/suzuna.jpg"
+                  src="./images/main_visuals/suzuna.jpeg"
                 />
                 <span class="shadow"></span>
               </a>
@@ -229,7 +229,7 @@
                 <span class="shadow"></span>
               </a>
               <p class="name">Hana✽*</p>
-            </div>
+            </div> -->
           </div>
         </details>
       </section>
