タイマー作動、名前変更

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="photo">
               <a href="./members/yugra.html">
                 <img src="./images/member_icons/yugra.jpg" alt="" />
-                <p>yu</p>
+                <p>Yuki Okubo</p>
               </a>
             </div>
             <div class="photo">
