--- a/members/yugra.html
+++ b/members/yugra.html
@@ -17,7 +17,7 @@
       property="og:image"
       content="https://dear-photo-exhibition.netlify.app/images/member_icons/yugra.jpg"
     />
-    <title>Dear | yu</title>
+    <title>Dear | Yuki Okubo</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -30,7 +30,7 @@
       <img class="bg-image" src="/images/main_visual.jpg" alt="" />
       <section class="personal-data">
         <img class="member-logo" src="/images/member_icons/yugra.jpg" alt="" />
-        <h1 class="name">yu</h1>
+        <h1 class="name">Yuki Okubo</h1>
         <div class="social-media">
           <a
             href="https://www.instagram.com/yugraphic6/"
